--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="Allclear">AC</string>
     <string name="equal">=</string>
     <string name="dot">.</string>
+    <string name="sqrt">"\u221A"</string>
+    <string name="toggler">+/-</string>
+    
 </resources>
