xml first commit
finished calculator xml prototype

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="dot">.</string>
     <string name="sqrt">"\u221A"</string>
     <string name="toggler">+/-</string>
-    
+    <string name="buttontextsize">20sp</string>
+    <string name="resulttextsize">60sp</string>
+
+
+
 </resources>
